<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">FoodZ</string>
    <string name="bittu_tikki_wala">Bittu Tikki Wala</string>
    <string name="nearest_to_your_house">Nearest To Your House</string>
    <string name="todo">TODO</string>
    <string name="get_otp">Get OTP</string>
    <string name="login_via_email">Login Via Email !</string>
    <string name="sign_up_create_account">Sign Up/Create Account</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="enter_your_phone_number">Enter Your Phone Number</string>
    <string name="todo1" tools:ignore="DuplicateDefinition">TODO</string>
    <string name="submit">Submit</string>
    <string name="title_activity_main_page">MainPage</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="welcome">Welcome</string>
    <string name="textview">TextView</string>
    <string name="Category">TextView</string>
    <string name="Description">TextView</string>
    <string name="Price">TextView</string>
    <string name="image">TODO</string>
    <string name="menu_category">Category</string>
    <string name="category">Category</string>
    <string name="mycart">MyCart</string>
    <string name="mune_my_cart">MyCart</string>
    <string name="Profile">Profile</string>
    <string name="order">Order</string>
    <string name="history">History</string>
    <string name="foodz_s_order_window">FoodZ\'s Order Window</string>
    <string name="confirm_your_order">Confirm Your Order</string>
</resources>